src/test/ui/proc-macro/invalid-punct-ident-1.stderr
query stack during panic:
we're just showing a limited slice of the query stack
end of query stack
error: proc macro panicked
  --> $DIR/invalid-punct-ident-1.rs:19:1
   |
LL | invalid_punct!();
   | ^^^^^^^^^^^^^^^^^
   |
   = help: message: unsupported character `'`'`

error: aborting due to previous error

